--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -56,8 +56,9 @@
         "script",
         "https://connect.facebook.net/en_US/fbevents.js"
       );
-      fbq("init", "770645597520725");
-      fbq("track", "PageView");
+      window.fbq("init", "770645597520725");
+      window.fbq("track", "PageView");
+      
     </script>
     <noscript
       ><img
